--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <main>
-      <ul id="output"></ul>
+      <div id="output"></div>
       <div id="json"></div>
     </main>
     <footer>
@@ -38,7 +38,7 @@
               <div>
                 <button type="button" id="send">send</button>
                 <button type="button" id="logout-button">logout</button>
-                <button type="button" id="download_excel" onclick="downloadAsExcel()">download excel</button>
+                <button type="button" id="download_excel" >download excel</button>
               </div>
             </fieldset>
           </form>
@@ -59,10 +59,10 @@
       };
     </script>
     <script type="module" src="/content.js"></script>
+    <script type="module" src="/jsonexcel.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/ui/6.0.0/firebase-ui-auth.js"></script>
     <script type="module" src="/logout.js"></script>
-    <script src="./jsonexcel.js"></script>
 </body>
 </html>
